# lib/api-spec/openapi.yaml
@@ -1441,6 +1441,8 @@ components:
           type: integer
         avgRating:
           type: number
+        photoUrl:
+          type: string
         createdAt:
           type: string
       required:
@@ -1469,6 +1471,8 @@ components:
         status:
           type: string
           enum: [available, busy, off, leave]
+        photoUrl:
+          type: string
       required:
         - name
         - email
